--- a/requirements.txt
+++ b/requirements.txt
@@ -1,8 +1,10 @@
 aiohttp>=3.8.0
 requests>=2.25.0
 httpx>=0.24.0
-gmssl==3.2.2
+aiofiles>=0.8.0
+Pillow>=9.0.0
 qrcode>=7.3.0
+gmssl==3.2.2
 browser-cookie3==0.19.1
 importlib_resources==6.4.0
 rich
