--- a/metadata.yaml
+++ b/metadata.yaml
@@ -1,6 +1,6 @@
 name: astrbot_plugin_parse_hub # 插件唯一识别名，以 astrbot_plugin_ 前缀开头
 display_name: 多平台解析 # 用于展示的名字，可以是方便人类阅读的名字（需要版本 >= v4.5.0，低版本不会报错，请放心填写）
-desc: xhs+dy+bili解析 # 插件简短描述
+desc: 多平台解析，仅测试telegram-bot # 插件简短描述
 version: v1.0.0 # 插件版本号。格式：v1.1.1 或者 v1.1
 author: Neilyo # 作者
 repo: https://github.com/lixinzai/astrbot_plugin_parse_hub # 插件的仓库地址
